include/xui/xui_features.h

typedef struct xui_button_style_values {
    uint32_t size, version, mask, reserved;
    xui_theme_color background, foreground, border_brush;
    xui_style_insets border_thickness, padding;
    float corner_radius;
    uint32_t reserved_end;
} xui_button_style_values;
typedef struct xui_button_style_options {
    uint32_t size, version;
    xui_button_style_values values;
    const xui_button_style_rule* rules;
    uint32_t rule_count, reserved;
    xui_handle based_on;
} xui_button_style_options;
XUI_API xui_status XUI_CALL xui_button_style_create(xui_handle window,
    const xui_button_style_options* options, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_style_release(xui_handle style) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_style_reacquire(xui_handle window,
    xui_handle identity, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_try_set_style(xui_handle button,
    xui_handle identity, uint32_t* applied) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_set_style(xui_handle button, xui_handle style) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_set_style_values(xui_handle button,
    const xui_button_style_values* values) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_button_get_style_values(xui_handle button,
    uint32_t effective, xui_button_style_values* values) XUI_NOEXCEPT;
typedef struct xui_style_property {
    uint32_t size, version, property, value_type, part, reserved;
    uint64_t state;
    xui_theme_color color;
    xui_style_insets insets;
    double number;
    xui_string text;
} xui_style_property;
typedef struct xui_control_style_options {
    uint32_t size, version, target, reserved;
    const xui_style_property* properties;
    uint32_t property_count, reserved_end;
    xui_handle based_on;
} xui_control_style_options;
XUI_API xui_status XUI_CALL xui_control_style_create(xui_handle window,
    const xui_control_style_options* options, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_style_release(xui_handle style) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_style_reacquire(xui_handle window,
    xui_handle identity, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_try_set_style(xui_handle control,
    xui_handle identity, uint32_t* applied) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_set_style(xui_handle control, xui_handle style) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_set_style_values(xui_handle control, uint32_t part,
    const xui_style_property* properties, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_control_get_style_values(xui_handle control, uint32_t part,
    uint32_t effective, xui_style_property* properties, uint32_t capacity, uint32_t* count) XUI_NOEXCEPT;
typedef struct xui_navigation_entry {
    uint32_t size, flags; 
    uint64_t id, parent;
    xui_string label, keywords;
} xui_navigation_entry;
typedef struct xui_item_visual {
    uint32_t size, icon;
    xui_string image_path;
} xui_item_visual;
XUI_API xui_status XUI_CALL xui_navigation_items_visual(xui_handle target,
    const xui_navigation_entry* items, const xui_item_visual* visuals, uint32_t count) XUI_NOEXCEPT;
typedef xui_status (XUI_CALL *xui_key_handler)(void*, const xui_key_event*, uint32_t*);
typedef xui_status (XUI_CALL *xui_navigation_handler)(void*, const xui_navigation_event*, uint32_t*);
typedef xui_status (XUI_CALL *xui_post_callback)(void*, uint32_t);
XUI_API xui_status XUI_CALL xui_navigation_items(xui_handle target,
    const xui_navigation_entry* items, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_title(xui_handle window, xui_string title) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_key_handler(xui_handle window,
    xui_key_handler callback, void* context) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_navigation_handler(xui_handle window,
    xui_navigation_handler callback, void* context) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_post(xui_handle window,
    xui_post_callback callback, void* context) XUI_NOEXCEPT;
typedef struct xui_feature_options {
    uint32_t size, version;
    xui_string name;
    xui_handle content, second;
    uint32_t mode, reserved;
} xui_feature_options;
typedef struct xui_feature_value {
    uint32_t size, version;
    double a, b, c, d;
    uint64_t first, second;
    xui_string text;
} xui_feature_value;
typedef struct xui_choice {
    uint32_t size, flags; 
    uint64_t id, version;
    xui_string text;
} xui_choice;
typedef struct xui_text_run {
    uint32_t size, flags; 
    xui_string text, link;
} xui_text_run;
typedef xui_status (XUI_CALL *xui_secret_receiver)(void*, const char*, uint32_t);
XUI_API uint32_t XUI_CALL xui_feature_version(void) XUI_NOEXCEPT;
XUI_API uint64_t XUI_CALL xui_capabilities(void) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_create(xui_handle window, uint32_t kind,
    const xui_feature_options* options, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_set(xui_handle target, uint32_t property,
    const xui_feature_value* value) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_get(xui_handle target, uint32_t property,
    xui_feature_value* value) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_action(xui_handle target, uint32_t action,
    uint64_t first, uint64_t second) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_choices(xui_handle target, const xui_choice* items,
    uint32_t count, uint64_t selected, uint32_t has_selection) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_feature_child(xui_handle target, uint32_t index,
    xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_panel_add(xui_handle target, xui_handle child,
    uint32_t row, uint32_t column, uint32_t row_span, uint32_t column_span) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_popup_show(xui_handle target, xui_handle anchor) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_rich_runs(xui_handle target, const xui_text_run* runs,
    uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_password_read(xui_handle target,
    xui_secret_receiver receiver, void* context) XUI_NOEXCEPT;
typedef struct xui_source_options {
    uint32_t size, version;
    uint64_t count;
    void* context;
    xui_source_query query;
    xui_context_ref retain, release;
} xui_source_options;
XUI_API xui_status XUI_CALL xui_source_create(xui_handle window,
    const xui_source_options* options, xui_handle* result) XUI_NOEXCEPT;
typedef xui_status (XUI_CALL *xui_source_visual_query)(void*, uint64_t, uint64_t,
    uint32_t*, char*, uint32_t, uint32_t*);
XUI_API xui_status XUI_CALL xui_source_create_visual(xui_handle window,
    const xui_source_options* options, xui_source_visual_query visual, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_source_attach(xui_handle target, xui_handle source) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_source_release(xui_handle source) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_collection_contains(xui_handle target,
    uint64_t id, uint64_t version, uint32_t* selected) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_tree_expand(xui_handle target, uint64_t id,
    uint64_t version, uint32_t expanded) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_tree_complete(xui_handle target, xui_handle request,
    xui_handle source, xui_string error) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_request_cancel(xui_handle request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_request_info(xui_handle request, xui_feature_value* value) XUI_NOEXCEPT;
typedef struct xui_grid_track {
    uint32_t size, sizing;
    float value, minimum, maximum;
    uint32_t reserved;
} xui_grid_track;
XUI_API xui_status XUI_CALL xui_grid_tracks(xui_handle target,
    const xui_grid_track* rows, uint32_t row_count,
    const xui_grid_track* columns, uint32_t column_count) XUI_NOEXCEPT;
typedef struct xui_column {
    uint32_t size, flags; 
    xui_string name;
    float width;
    uint32_t reserved;
} xui_column;
XUI_API xui_status XUI_CALL xui_grid_columns(xui_handle target,
    const xui_column* columns, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_column_width(xui_handle target,
    uint32_t column, float width) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_column_order(xui_handle target,
    const uint32_t* order, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_filter(xui_handle target,
    uint32_t source_column, xui_string query) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_sort(xui_handle target,
    uint32_t source_column, uint32_t descending) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_grid_check(xui_handle target,
    uint64_t id, uint64_t version, uint32_t checked) XUI_NOEXCEPT;
typedef struct xui_command_record {
    uint32_t size, kind;
    uint64_t id, parent;
    xui_string label, hint, pin_label;
    uint32_t flags, icon; 
} xui_command_record;
XUI_API xui_status XUI_CALL xui_context_menu_bind(xui_handle target,
    xui_callback callback, void* context) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_context_menu_items(xui_handle target,
    const xui_command_record* commands, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_context_menu_shell_paths(xui_handle target,
    const xui_string* paths, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_context_menu_presentation(xui_handle target, uint32_t presentation) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_commands_set(xui_handle target,
    const xui_command_record* commands, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_command_invoke(xui_handle target,
    uint64_t id, uint32_t pin) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_command_bind(xui_handle target,
    uint64_t id, uint32_t key, uint32_t modifiers) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_shell_show(xui_handle anchor,
    const xui_string* paths, uint32_t count) XUI_NOEXCEPT;
typedef struct xui_shape {
    uint32_t size, flags; 
    uint64_t id;
    const xui_scene_point* points;
    uint32_t count, reserved;
    float fill_red, fill_green, fill_blue, fill_alpha;
    float stroke_red, stroke_green, stroke_blue, stroke_alpha;
    float stroke_width, clip_x, clip_y, clip_width, clip_height;
    uint32_t reserved2;
    double m11, m12, m21, m22, dx, dy;
    xui_string name;
} xui_shape;
XUI_API xui_status XUI_CALL xui_canvas_scene(xui_handle target,
    const xui_shape* shapes, uint32_t count) XUI_NOEXCEPT;
typedef struct xui_map_marker {
    uint32_t size, reserved;
    uint64_t id;
    double latitude, longitude;
    xui_string name;
} xui_map_marker;
XUI_API xui_status XUI_CALL xui_map_markers(xui_handle target,
    const xui_map_marker* markers, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_map_request(xui_handle target, xui_handle* request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_map_complete(xui_handle target, xui_handle request,
    const xui_map_marker* markers, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_window_create_features(const xui_window_options* options,
    uint32_t custom_titlebar, xui_handle* result) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_dialog_validation(xui_handle target, xui_string message) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_origins(xui_handle target,
    const xui_string* origins, uint32_t count) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_navigate(xui_handle target, xui_string uri) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_evaluate(xui_handle target, xui_string script, xui_handle* request) XUI_NOEXCEPT;
XUI_API xui_status XUI_CALL xui_web_result(xui_handle request, char* buffer,
    uint32_t capacity, uint32_t* required, uint32_t* is_error) XUI_NOEXCEPT;