bindings/dotnet/Xui/Native.Features.g.cs

[LibraryImport("xui", EntryPoint = "xui_button_style_create")]
internal static partial int ButtonStyleCreate(ulong @window, ButtonStyleOptions* @options, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_button_style_release")]
internal static partial int ButtonStyleRelease(ulong @style);
[LibraryImport("xui", EntryPoint = "xui_button_style_reacquire")]
internal static partial int ButtonStyleReacquire(ulong @window, ulong @identity, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_button_try_set_style")]
internal static partial int ButtonTrySetStyle(ulong @button, ulong @identity, uint* @applied);
[LibraryImport("xui", EntryPoint = "xui_button_set_style")]
internal static partial int ButtonSetStyle(ulong @button, ulong @style);
[LibraryImport("xui", EntryPoint = "xui_button_set_style_values")]
internal static partial int ButtonSetStyleValues(ulong @button, ButtonStyleValues* @values);
[LibraryImport("xui", EntryPoint = "xui_button_get_style_values")]
internal static partial int ButtonGetStyleValues(ulong @button, uint @effective, ButtonStyleValues* @values);
[LibraryImport("xui", EntryPoint = "xui_control_style_create")]
internal static partial int ControlStyleCreate(ulong @window, ControlStyleOptions* @options, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_control_style_release")]
internal static partial int ControlStyleRelease(ulong @style);
[LibraryImport("xui", EntryPoint = "xui_control_style_reacquire")]
internal static partial int ControlStyleReacquire(ulong @window, ulong @identity, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_control_try_set_style")]
internal static partial int ControlTrySetStyle(ulong @control, ulong @identity, uint* @applied);
[LibraryImport("xui", EntryPoint = "xui_control_set_style")]
internal static partial int ControlSetStyle(ulong @control, ulong @style);
[LibraryImport("xui", EntryPoint = "xui_control_set_style_values")]
internal static partial int ControlSetStyleValues(ulong @control, uint @part, StyleProperty* @properties, uint @count);
[LibraryImport("xui", EntryPoint = "xui_control_get_style_values")]
internal static partial int ControlGetStyleValues(ulong @control, uint @part, uint @effective, StyleProperty* @properties, uint @capacity, uint* @count);
[LibraryImport("xui", EntryPoint = "xui_navigation_items_visual")]
internal static partial int NavigationItemsVisual(ulong @target, NavigationEntry* @items, ItemVisual* @visuals, uint @count);
[LibraryImport("xui", EntryPoint = "xui_navigation_items")]
internal static partial int NavigationItems(ulong @target, NavigationEntry* @items, uint @count);
[LibraryImport("xui", EntryPoint = "xui_window_title")]
internal static partial int WindowTitle(ulong @window, Text @title);
[LibraryImport("xui", EntryPoint = "xui_window_key_handler")]
internal static partial int WindowKeyHandler(ulong @window, delegate* unmanaged[Cdecl]<nint, KeyEvent*, uint*, int> @callback, nint @context);
[LibraryImport("xui", EntryPoint = "xui_window_navigation_handler")]
internal static partial int WindowNavigationHandler(ulong @window, delegate* unmanaged[Cdecl]<nint, NavigationEvent*, uint*, int> @callback, nint @context);
[LibraryImport("xui", EntryPoint = "xui_window_post")]
internal static partial int WindowPost(ulong @window, delegate* unmanaged[Cdecl]<nint, uint, int> @callback, nint @context);
[LibraryImport("xui", EntryPoint = "xui_feature_version")]
internal static partial uint FeatureVersion();
[LibraryImport("xui", EntryPoint = "xui_capabilities")]
internal static partial ulong Capabilities();
[LibraryImport("xui", EntryPoint = "xui_feature_create")]
internal static partial int FeatureCreate(ulong @window, uint @kind, FeatureOptions* @options, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_feature_set")]
internal static partial int FeatureSet(ulong @target, uint @property, FeatureValue* @value);
[LibraryImport("xui", EntryPoint = "xui_feature_get")]
internal static partial int FeatureGet(ulong @target, uint @property, FeatureValue* @value);
[LibraryImport("xui", EntryPoint = "xui_feature_action")]
internal static partial int FeatureAction(ulong @target, uint @action, ulong @first, ulong @second);
[LibraryImport("xui", EntryPoint = "xui_choices")]
internal static partial int Choices(ulong @target, Choice* @items, uint @count, ulong @selected, uint @has_selection);
[LibraryImport("xui", EntryPoint = "xui_feature_child")]
internal static partial int FeatureChild(ulong @target, uint @index, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_panel_add")]
internal static partial int PanelAdd(ulong @target, ulong @child, uint @row, uint @column, uint @row_span, uint @column_span);
[LibraryImport("xui", EntryPoint = "xui_popup_show")]
internal static partial int PopupShow(ulong @target, ulong @anchor);
[LibraryImport("xui", EntryPoint = "xui_rich_runs")]
internal static partial int RichRuns(ulong @target, TextRun* @runs, uint @count);
[LibraryImport("xui", EntryPoint = "xui_password_read")]
internal static partial int PasswordRead(ulong @target, delegate* unmanaged[Cdecl]<nint, byte*, uint, int> @receiver, nint @context);
[LibraryImport("xui", EntryPoint = "xui_source_create")]
internal static partial int SourceCreate(ulong @window, SourceOptions* @options, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_source_create_visual")]
internal static partial int SourceCreateVisual(ulong @window, SourceOptions* @options, delegate* unmanaged[Cdecl]<nint, ulong, ulong, uint*, byte*, uint, uint*, int> @visual, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_source_attach")]
internal static partial int SourceAttach(ulong @target, ulong @source);
[LibraryImport("xui", EntryPoint = "xui_source_release")]
internal static partial int SourceRelease(ulong @source);
[LibraryImport("xui", EntryPoint = "xui_collection_contains")]
internal static partial int CollectionContains(ulong @target, ulong @id, ulong @version, uint* @selected);
[LibraryImport("xui", EntryPoint = "xui_tree_expand")]
internal static partial int TreeExpand(ulong @target, ulong @id, ulong @version, uint @expanded);
[LibraryImport("xui", EntryPoint = "xui_tree_complete")]
internal static partial int TreeComplete(ulong @target, ulong @request, ulong @source, Text @error);
[LibraryImport("xui", EntryPoint = "xui_request_cancel")]
internal static partial int RequestCancel(ulong @request);
[LibraryImport("xui", EntryPoint = "xui_request_info")]
internal static partial int RequestInfo(ulong @request, FeatureValue* @value);
[LibraryImport("xui", EntryPoint = "xui_grid_tracks")]
internal static partial int GridTracks(ulong @target, GridTrack* @rows, uint @row_count, GridTrack* @columns, uint @column_count);
[LibraryImport("xui", EntryPoint = "xui_grid_columns")]
internal static partial int GridColumns(ulong @target, Column* @columns, uint @count);
[LibraryImport("xui", EntryPoint = "xui_grid_column_width")]
internal static partial int GridColumnWidth(ulong @target, uint @column, float @width);
[LibraryImport("xui", EntryPoint = "xui_grid_column_order")]
internal static partial int GridColumnOrder(ulong @target, uint* @order, uint @count);
[LibraryImport("xui", EntryPoint = "xui_grid_filter")]
internal static partial int GridFilter(ulong @target, uint @source_column, Text @query);
[LibraryImport("xui", EntryPoint = "xui_grid_sort")]
internal static partial int GridSort(ulong @target, uint @source_column, uint @descending);
[LibraryImport("xui", EntryPoint = "xui_grid_check")]
internal static partial int GridCheck(ulong @target, ulong @id, ulong @version, uint @checked);
[LibraryImport("xui", EntryPoint = "xui_context_menu_bind")]
internal static partial int ContextMenuBind(ulong @target, delegate* unmanaged[Cdecl]<nint, Event*, int> @callback, nint @context);
[LibraryImport("xui", EntryPoint = "xui_context_menu_items")]
internal static partial int ContextMenuItems(ulong @target, CommandRecord* @commands, uint @count);
[LibraryImport("xui", EntryPoint = "xui_context_menu_shell_paths")]
internal static partial int ContextMenuShellPaths(ulong @target, Text* @paths, uint @count);
[LibraryImport("xui", EntryPoint = "xui_context_menu_presentation")]
internal static partial int ContextMenuPresentation(ulong @target, uint @presentation);
[LibraryImport("xui", EntryPoint = "xui_commands_set")]
internal static partial int CommandsSet(ulong @target, CommandRecord* @commands, uint @count);
[LibraryImport("xui", EntryPoint = "xui_command_invoke")]
internal static partial int CommandInvoke(ulong @target, ulong @id, uint @pin);
[LibraryImport("xui", EntryPoint = "xui_command_bind")]
internal static partial int CommandBind(ulong @target, ulong @id, uint @key, uint @modifiers);
[LibraryImport("xui", EntryPoint = "xui_shell_show")]
internal static partial int ShellShow(ulong @anchor, Text* @paths, uint @count);
[LibraryImport("xui", EntryPoint = "xui_canvas_scene")]
internal static partial int CanvasScene(ulong @target, Shape* @shapes, uint @count);
[LibraryImport("xui", EntryPoint = "xui_map_markers")]
internal static partial int MapMarkers(ulong @target, MapMarker* @markers, uint @count);
[LibraryImport("xui", EntryPoint = "xui_map_request")]
internal static partial int MapRequest(ulong @target, ulong* @request);
[LibraryImport("xui", EntryPoint = "xui_map_complete")]
internal static partial int MapComplete(ulong @target, ulong @request, MapMarker* @markers, uint @count);
[LibraryImport("xui", EntryPoint = "xui_window_create_features")]
internal static partial int WindowCreateFeatures(Options* @options, uint @custom_titlebar, ulong* @result);
[LibraryImport("xui", EntryPoint = "xui_dialog_validation")]
internal static partial int DialogValidation(ulong @target, Text @message);
[LibraryImport("xui", EntryPoint = "xui_web_origins")]
internal static partial int WebOrigins(ulong @target, Text* @origins, uint @count);
[LibraryImport("xui", EntryPoint = "xui_web_navigate")]
internal static partial int WebNavigate(ulong @target, Text @uri);
[LibraryImport("xui", EntryPoint = "xui_web_evaluate")]
internal static partial int WebEvaluate(ulong @target, Text @script, ulong* @request);
[LibraryImport("xui", EntryPoint = "xui_web_result")]
internal static partial int WebResult(ulong @request, byte* @buffer, uint @capacity, uint* @required, uint* @is_error);
}
